Back: (4) Sistema de recuperació de informació de usuari de backoffice https://github.com/GovernIB/carpeta/issues/98

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@
 /database/target
 /ldap/target
 /target
+/.settings
+/keycloak/.project
+/keycloak/.settings
+/keycloak/target
+/keycloak/.classpath
+/ldap/.project
+/ldap/.settings
+/ldap/.classpath
+/api/.classpath
+/api/.project
+/api/.settings/org.eclipse.core.resources.prefs
+/api/.settings/org.eclipse.jdt.core.prefs
+/api/.settings/org.eclipse.m2e.core.prefs
+/database/.classpath
+/database/.project
+/database/.settings/org.eclipse.core.resources.prefs
+/database/.settings/org.eclipse.jdt.core.prefs
+/database/.settings/org.eclipse.m2e.core.prefs
