--- a/keycloak/sample.properties
+++ b/keycloak/sample.properties
@@ -1,5 +1,5 @@
 	
-
+#Class Plugin  org.fundaciobit.pluginsib.userinformation.keycloak.KeyCloakUserInformationPlugin
 
 # BASE org.fundaciobit.sample
 	
