--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /database/.settings/org.eclipse.core.resources.prefs
 /database/.settings/org.eclipse.jdt.core.prefs
 /database/.settings/org.eclipse.m2e.core.prefs
+/keycloak/keycloak.properties
