--- a/keycloak/pom.xml
+++ b/keycloak/pom.xml
@@ -1,72 +1,59 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.fundaciobit.pluginsib.userinformation</groupId>
-    <artifactId>pluginsib-userinformation-keycloak</artifactId>
-    <packaging>jar</packaging>
-    <version>2.0.2</version>
-    <name>PluginsIB - UserInformation - KeyCloak</name>
-    <parent>
-        <groupId>org.fundaciobit.pluginsib.userinformation</groupId>
-        <version>2.0.0</version>
-        <artifactId>pluginsib-userinformation</artifactId>
-    </parent>
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>	
+	<artifactId>pluginsib-userinformation-keycloak</artifactId>
+	<packaging>jar</packaging>
+	<!-- <version>3.0.0</version>  -->
+	<name>PluginsIB - UserInformation - KeyCloak</name>
+	<parent>
+		<groupId>org.fundaciobit.pluginsib.userinformation</groupId>
+		<version>3.0.0</version>
+		<artifactId>pluginsib-userinformation</artifactId>
+	</parent>
 	<properties>
-		<resteasy.version>3.6.3.Final</resteasy.version> 
-		<keycloak.version>6.0.1</keycloak.version>
+		<resteasy.version>3.6.3.Final</resteasy.version>
 	</properties>
-
-    <dependencies>
-        <dependency>
-          <groupId>org.fundaciobit.pluginsib.userinformation</groupId>
-          <artifactId>pluginsib-userinformation-api</artifactId>
-          <version>2.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-admin-client</artifactId>
-            <version>${keycloak.version}</version>
-        </dependency>
-
+	<dependencies>
 		<dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-client</artifactId>
-            <version>${resteasy.version}</version>
-            <!-- <scope>provided</scope> -->
-        </dependency>
-
+			<groupId>org.fundaciobit.pluginsib.userinformation</groupId>
+			<artifactId>pluginsib-userinformation-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-admin-client</artifactId>
+			<version>${keycloak.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>${resteasy.version}</version>
+			<!-- <scope>provided</scope> -->
+		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>${resteasy.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>${resteasy.version}</version>
 		</dependency>
-
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxb-provider</artifactId>
-            <version>${resteasy.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jackson2-provider</artifactId>
-            <version>${resteasy.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxb-provider</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson2-provider</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
