--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -3,18 +3,18 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>pluginsib-userinformation-ldap</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.1</version>
+  <!--  <version>3.0.0</version>  -->
   <name>PluginsIB - UserInformation - LDAP</name>
   <parent>
     <groupId>org.fundaciobit.pluginsib.userinformation</groupId>
-    <version>2.0.0</version>
+    <version>3.0.0</version>
     <artifactId>pluginsib-userinformation</artifactId>
   </parent>
   <dependencies>
     <dependency>
       <groupId>org.fundaciobit.pluginsib.userinformation</groupId>
       <artifactId>pluginsib-userinformation-api</artifactId>
-      <version>2.0.0</version>
+      <version>3.0.0</version>
     </dependency>
 	<dependency>
 	  <groupId>org.fundaciobit.pluginsib.utils</groupId>
@@ -22,17 +22,4 @@
       <version>2.0.1</version>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <encoding>UTF-8</encoding>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
