--- a/keycloak/pom.xml
+++ b/keycloak/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>	
 	<artifactId>pluginsib-userinformation-keycloak</artifactId>
 	<packaging>jar</packaging>
-	<!-- <version>3.0.0</version>  -->
+	<version>3.0.1</version>
 	<name>PluginsIB - UserInformation - KeyCloak</name>
 	<parent>
 		<groupId>org.fundaciobit.pluginsib.userinformation</groupId>
