--- a/database/pom.xml
+++ b/database/pom.xml
@@ -3,9 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>pluginsib-userinformation-database</artifactId>
 	<packaging>jar</packaging>
-    <!-- 
-	<version>3.0.0</version>
-     -->
+	<version>3.0.0-SNAPSHOT</version>
 	<name>PluginsIB - UserInformation - Database</name>
 	<parent>
 		<groupId>org.fundaciobit.pluginsib.userinformation</groupId>
