--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>pluginsib-userinformation-ldap</artifactId>
   <packaging>jar</packaging>
-  <!--  <version>3.0.0</version>  -->
+  <version>3.0.0-SNAPSHOT</version>
   <name>PluginsIB - UserInformation - LDAP</name>
   <parent>
     <groupId>org.fundaciobit.pluginsib.userinformation</groupId>
